--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -27,8 +27,7 @@
     
 </head>
 <body ontouchstart="">
-    <div id="backToTop" onclick="backToTop()"><i class="fas fa-arrow-up"></i></div>
-    <!-- <div class="bottom-nav" id="bottomNav" onclick="window.location.href='/bestill'"><a>Kom i gang</a></div> -->
+    <!-- <div id="backToTop" onclick="backToTop()"><i class="fas fa-arrow-up"></i></div> -->
     {% include 'core/nav.html' %}
     {% include 'popup/cookie.html' %}
     <div id="allContentArea">
