--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -148,18 +148,6 @@
             </div>
          </div>
       </div>
-      <!-- MEMBERSHIP SITES -->
-      <div class="card">
-         <div class="card-content">
-            <div class="icon">
-               <i class="fa-solid fa-calendar-days"></i>
-            </div>
-            <div class="card-text">
-               <h1>Medlemskap nettside</h1>
-               <p>Lad gjentakende abonnementer, betalingsplaner og til og med "betal hva du vil"-priser</p>
-            </div>
-         </div>
-      </div>
       <!-- AND MUCH MORE -->
       <div class="card">
          <div class="card-content">
@@ -239,7 +227,7 @@
          <!-- PROCCESS IMAGE TEXT -->
          <div class="proccess-image-text">
             <h1>Velg plan</h1>
-            <p>Det første steget er å bestemme hvilken type plan du skal velge. Du kan også velge hosting som vi anbefaller sterkt til kun 60kr/m</p>
+            <p>Det første steget er å bestemme hvilken type plan du skal velge</p>
          </div>
       </div>
       <!-- PROCCESS CARD -->
@@ -254,7 +242,7 @@
          <!-- PROCCESS IMAGE TEXT -->
          <div class="proccess-image-text">
             <h1>Send bestillingen</h1>
-            <p>Nå trenger du ikke gjøre noe mer, med engang bestillingen har blitt motatt vil designere våres starte å lage designen</p>
+            <p>Nå trenger du ikke gjøre noe mer. Med engang bestillingen har blitt motatt vil designere våres starte å lage designen</p>
          </div>
       </div>
       <!-- PROCCESS CARD -->
@@ -275,6 +263,59 @@
 
    </div>
 </div>
+<!-- BOOST CONVERSIONS -->
+<div class="boost-conversions">
+   <!-- BOOST CONTENT -->
+   <div class="content">
+      <!-- BOOST TEXT -->
+      <div class="text">
+         <p class="boost-headingp">fordeler og sider</p>
+         <h1>Øk konverteringer med en unik nettside</h1>
+         <!-- HOSTING LONG PARAGRAPH -->
+         <p class="boost-longp">
+            Kom i gang på noen få klikk, og du er klar til å akseptere bestillinger i dag
+         </p>
+      </div>
+   </div>
+</div>
+<!-- BOOST BENEFITS -->
+<div class="boost-benefits">
+   <!-- BOOST BENEFITS CONTENT -->
+   <div class="content">
+      <!-- BOOST BENEFITS FLEX -->
+      <div class="flex">
+         <!-- BOOST BENEFITS ICON -->
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>eCommerce & Medlemskap</p>
+      </div>
+      <!-- BOOST BENEFITS FLEX -->
+      <div class="flex">
+         <!-- BOOST BENEFITS ICON -->
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>Gratis & Betalte Prøveversjoner</p>
+      </div>
+      <!-- BOOST BENEFITS FLEX -->
+      <div class="flex">
+         <!-- BOOST BENEFITS ICON -->
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>Krever lite progamering</p>
+      </div>
+      <!-- BOOST BENEFITS FLEX -->
+      <div class="flex">
+         <!-- BOOST BENEFITS ICON -->
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>100% tilgang til nettsiden</p>
+      </div>
+   </div>
+</div>
 <!-- HOSTING AND DATA -->
 <div class="hosting">
    <!-- HOSTING CONTENT -->
@@ -282,20 +323,13 @@
       <!-- HOSTING TEXT -->
       <div class="text">
          <p class="hosting-headingp">data og hosting</p>
-         <h1>Mega Rask Hosting og Sikkerhet Av Dataen Din</h1>
-      </div>
-      <!-- HOSTING IMAGE SECTION -->
-      <div class="hosting-image">
-         <img src="{% static '/images/other/hosting.jpg' %}" alt="hosting">
+         <h1>Billig Hosting med Høy Sikkerthet av Dataen Din</h1>
       </div>
       <!-- HOSTING LONG PARAGRAPH -->
       <p class="hosting-longp">
          Vi tilbyr en hosting tjeneste som vi <strong>anbefaller på det sterkeste</strong> for kunn 60kr/m. 
          Hostingen er gjort via en sikker server, og alle dataene dine vil bli tatt vare på, og du vil få inkludert SSL i de 60kr/m.
          Vi sørger for at ved bruk av hosting tjenesten våres, så garanterer vi 99% oppetid på nettisiden. 
-         Du kan selvfølgelig velge å hoste nettsiden selv, men om du ønsker vi skal gjøre endringer på nettsiden, så tar det litt lengre tid.
-         Du kan velge å benytte hostingen tjenesten våres når du skal sende inn bestilling skjemaet.
-
       </p>
    </div>
 </div>
@@ -345,93 +379,42 @@
       </div>
    </div>
 </div>
-<!-- WEBISTE EDITS -->
-<div class="edit">
-   <!-- WEBSITE EDTIS CONTENT -->
-   <div class="content">
-      <!-- WEBSITE EDITS TEXT -->
-      <div class="text">
-         <!-- WEBSITE EDITS MAIN TEXTS -->
-         <p class="edit-headingp">endringer på nettsiden</p>
-         <h1>Spørr Om Endringer På Nettsiden</h1>
-      </div>
-      <!-- WEBISTE EDITS LONG PARAGRAPH -->
-      <p class="edit-longp">
-         Om du ønsker å endre noe på nettsiden, så kan vi hjelpe deg med det HELT GRATIS kunn i 14 dager etter bestilling.
-         Etter 14 dager så blir det en pris som du og oss kommer til enighet, avhengig hvor mye du vil endre på nettsiden.
-         For å spørre om endringer må du gå til <strong>"Min bruker"</strong>. Der kan du se en liste over alle bestillingene dine, hvor du kan spørre om endringer på nettsiden.
-         Du trenger bare å sende inn et skjema, og vi skal komme tilbake til deg innen 30 min.
-      </p>
-      <!-- EDIT IMAGE -->
-      <img class="edit-image" src="{% static '/images/other/edit.png' %}" alt="hosting">
-   </div>
-   <!--  BLUE IMAGE -->
-   <img src="{% static '/images/other/blue-line.png' %}" alt="hosting">
-</div>
 <!-- PRICES -->
 <div class="prices">
    <!-- PRICES CONTENT -->
    <div class="content">
+      <!-- PRICES TEXT -->
+      <div class="text">
+         <p class="price-headingp">priser</p>
+         <h1>Velg hva som passer deg best</h1>
+      </div>
       <!-- PRODUCT FLEX SECTION -->
       <div class="product-section">
          {% for product in products %}
             <!-- PRODUCT CARD -->
-            <div class="card">
-               <!-- PRODUCT NAME -->
-               <h1 class="product-name">{{ product.name }}</h1>
-               {% if product.is_small %}
-                  <div class="product-type">Liten</div>
-               {% endif %}
-               {% if product.is_middle %}
-                  <div class="product-type">Middels</div>
-               {% endif %}
-               {% if product.is_big %}
-                  <div class="product-type">Stor</div>
-               {% endif %}
-               <!-- PRODUCT PRICE -->
-               <h1 class="product-price">{{ product.price | floatformat }}kr</h1>
-               <br>
-               <hr>
-               <!-- PRODUCT INCLUDED -->
-               <div class="included">
-                  <!-- ECOMMERCE -->
-                  <div class="part1">
-                     <ul>
-                        {% if product.is_small %}
-                        <li>Konverter</li>
-                        <li>Modern</li>
-                        <li>Responsiv</li>
-                        <li>Lav pris</li>
-                        <li>Selg alt</li>
-                        <li>Bedrift</li>
-                        <li>Rask levering</li>
-                        {% endif %}
-                        {% if product.is_middle %}
-                        <li>Konverter</li>
-                        <li>Modern</li>
-                        <li>Responsiv</li>
-                        <li>Lav pris</li>
-                        <li>Selg alt</li>
-                        <li>Bedrift</li>
-                        <li>Rask levering</li>
-                        {% endif %}
-                        {% if product.is_big %}
-                        <li>Konverter</li>
-                        <li>Modern</li>
-                        <li>Responsiv</li>
-                        <li>Lav pris</li>
-                        <li>Selg alt</li>
-                        <li>Bedrift</li>
-                        <li>Rask levering</li>
-                        {% endif %}
-                     </ul>
+            <div class="product-card" onclick="window.location.href='{% url 'product_detail' product.slug %}'">
+               <div class="card-content">
+                  <div class="icon">
+                     <i class="fad fa-arrow-alt-from-left"></i>
                   </div>
-                  <div class="part2">
-                     <button onclick="window.location.href='{% url 'product_detail' product.slug %}'">Les mer</button>
+                  <div class="card-text">
+                     <!-- PRODUCT NAME -->
+                     <div class="product-name">
+                        <h1>{{ product.name }}</h1>{% if product.is_small %}<div class="product-type">LITEN</div>{% endif %}{% if product.is_middle %}<div class="product-type">MIDDELS</div>{% endif %}{% if product.is_big %}<div class="product-type">STOR</div>{% endif %}
+                     </div>
+                     <p>
+                        <!-- SMALL WEBSITE -->
+                        {% if product.is_small %}En vanlig nettbutikk, selg hva som helst. Om oss side, Kontakt oss side, handlekurv og checkout er inkludert{% endif %}
+                        <!-- MEDIUM WEBSITE -->
+                        {% if product.is_middle %}En større nettside, flere funksjoner og inkludert en Blogg side{% endif %}
+                        <!-- BIG WEBSITE -->
+                        {% if product.is_big %}Største nettsiden. Få 4 ekstra sider som du bestemmer hva de skal være{% endif %}
+                        <br><br>
+                        <strong>Kunn: {{ product.price | floatformat }}kr</strong>
+                     </p>
                   </div>
                </div>
-            <br>
-         </div>
+            </div>
          {% endfor %}   
       </div>
    </div>
