--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -31,9 +31,9 @@
         <!-- SIDEBAR -->
         <div class="sidebar" id="sidebar">
             <!-- DOG PEEKING -->
-            <div class="sidebar-bottom-img">
+            <!-- <div class="sidebar-bottom-img">
                 <img src="{% static '/images/other/dog-peeking.png' %}" alt="dog peeking">
-            </div>
+            </div> -->
             <ul class="sidebar-ul">
                 <li class="sidebar-li" id="sidebarLi">
                     <div class="help-dropdown">
