--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="{% static '/scss/store/product.css' %}" type="text/css">
 
 <div class="product-page-blog">
+    {{ product.price }}
    <div id="navbar-blog">
       <!-- LOGO -->
       <div class="logo" id="logo" onclick="window.location.href='/'">
