--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -96,16 +96,16 @@
   width: 100%;
   height: auto;
   text-align: center;
-  background: #007be0;
+  background: #f7f7f7;
   padding: 6px;
 }
 
 #footer .copyright p {
   padding: auto;
   margin: auto;
-  color: white;
-  font-size: 14px;
-  font-weight: 600;
+  color: black;
+  font-size: 13px;
+  opacity: 0.8;
 }
 
 @media only screen and (min-device-width: 1024px) {
